frontend-auth.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-auth
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        sidecar.aws.signing-proxy/inject: "true"
        sidecar.aws.signing-proxy/host: "datastore.lattice.sarathy.io"
        sidecar.aws.signing-proxy/name: "vpc-lattice-svcs"
        sidecar.aws.signing-proxy/region: "us-west-2"
        sidecar.aws.signing-proxy/unsigned-payload: "true"        
        sidecar.aws.signing-proxy/scheme: "http"        
    spec: 
      serviceAccountName: aws-sigv4-client
      containers:          
        - name: go  
          image: 937351930975.dkr.ecr.us-west-2.amazonaws.com/k8s-frontend:lattice
          imagePullPolicy: Always   
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
          livenessProbe:
            httpGet: 
              path: /live
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3            
          readinessProbe:
            httpGet: 
              path: /ready
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3        
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-auth-svc
  namespace: apps
spec:
  type: ClusterIP  
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: frontend
